# poormanray

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
release-notes/: 0.1.0.txt  0.2.0.md  0.2.1.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.txt  0.7.0.md  1.0.0.md  1.1.0.md  1.1.0.txt  1.2.0.md  1.3.0.md  1.4.0.md  1.5.0.md  1.6.0.md
src/poormanray/: __init__.py  aws_instance.py  base_instance.py  cli.py  commands.py  ec2_instance.py  gcp_instance.py  logger.py  session.py  ssh_session.py  tagging.py  utils.py
