[project]
name = "poormanray"
dynamic = ["version"]
description = "A minimal alternative to Ray for distributed data processing on EC2 instances"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Luca Soldaini", email = "luca@soldaini.net" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
]
keywords = ["aws", "ec2", "distributed", "cluster", "ray", "data-processing"]
dependencies = [
    "boto3>=1.26.0",
    "click>=8.0.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[ec2,ssm]",
    "mypy",
    "ruff",
]

[project.scripts]
poormanray = "poormanray.cli:cli"
pmr = "poormanray.cli:cli"

[project.urls]
Homepage = "https://github.com/allenai/poormanray"
Repository = "https://github.com/allenai/poormanray"
Issues = "https://github.com/allenai/poormanray/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/poormanray/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/poormanray"]

[tool.ruff]
line-length = 115

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
